fix main nav's .is-active style on small screens

--- a/assets/scss/layouts/_l-default.scss
+++ b/assets/scss/layouts/_l-default.scss
@@ -21,7 +21,10 @@
 
     .is-active {
       background-color: $menu-item-background-active;
-      box-shadow: inset 0 -0.5rem 0 $dcp-yellow;
+      box-shadow: inset 0.5rem 0 0 $dcp-yellow;
+      @include breakpoint(large) {
+        box-shadow: inset 0 -0.5rem 0 $dcp-yellow;
+      }
 
       a {
         color: $black;
